fix: change the navbar spacing

--- a/src/components/layout/MainNavigation.module.css
+++ b/src/components/layout/MainNavigation.module.css
@@ -74,7 +74,7 @@ span {
   .header {
     flex-direction: column;
     align-items: flex-start;
-    padding: 0 3.5rem;
+    padding: 0 2.5rem;
     position: relative;
   }
 
@@ -92,7 +92,7 @@ span {
     font-size: 1.3em;
     display: unset;
     position: absolute;
-    right: 2.3em;
+    right: 2em;
     cursor: pointer;
   }
 
